Update the eventbus APi spec and generate useful stubs
Now getting to the point where I can implement the actual logic behind the
scenes of this API.

Fun
